[package]
name = "bevy_github_ci_template"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.10", features = ["exr"] }
bevy_editor_pls = "0.4"
bevy_rapier3d = "0.21"
bevy_fps_controller = "0.2"
bevy_mod_mesh_tools = { git = "https://github.com/DGriffin91/bevy_mod_mesh_tools" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_asset_loader = "0.16"
bevy_egui = "0.20"
rand = "0.8"
rand_pcg = "0.3"
bevy_polyline = "0.6.0"


[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3