[package]
name = "traverse"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.10", features = ["exr",    
                                       "animation",
                                       "bevy_asset",
                                       "bevy_scene",
                                       "bevy_winit",
                                       "bevy_core_pipeline",
                                       "bevy_pbr",
                                       "bevy_gltf",
                                       "bevy_render",
                                       "bevy_sprite",
                                       "bevy_text",
                                       "bevy_ui",
                                       "png",
                                       "hdr",
                                       "zstd",
                                       "x11",
                                       "ktx2",
                                       "filesystem_watcher",
                                       "tonemapping_luts"], default-features = false }
                                       
bevy_rapier3d = "0.21"
bevy_fps_controller = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_asset_loader = { version  = "0.16", features = ["progress_tracking"] }
bevy_egui = "0.20"
rand = "0.8"
rand_pcg = "0.3"
bevy_polyline = "0.6.0"
iyes_progress = "0.8.0"
bevy_kira_audio = { version = "0.15", features = ["flac"] }

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3